# trustlens

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
api/: __init__.py  main.py
data/: trustlens.duckdb
data/eval/: sample_claims.csv  trustlens_eval_v1.csv
docs/deploy/: aws_app_runner.md
scripts/: render_start.sh  smoke_test.py
src/api/: __init__.py  main.py
src/trustlens/: __main__.py
src/trustlens.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/trustlens/api/: deps.py  main.py  rate_limit.py  routes_models.py  routes_runs.py  schemas.py
src/trustlens/cli/: __init__.py  __main__.py  app.py  benchmark.py  chat.py  evaluate.py  explain.py  extract_features.py  list_models.py  train_model.py
src/trustlens/clients/: hf_reliability_dataset.py
src/trustlens/config/: settings.py
src/trustlens/db/: engine.py  init_db.py  schema.py  session.py
src/trustlens/models/: domain.py
src/trustlens/repos/: eval_repo.py  evidence_repo.py  explanation_repo.py  feature_repo.py  features_repo.py  model_versions_repo.py  runs_repo.py  (+3 more)
tests/: conftest.py  test_cli_explain_chat.py  test_db_ping.py  test_error_artifacts.py  test_feature_extraction.py  test_feature_pipeline.py  test_feature_repo.py  test_gdelt_client.py  test_health.py  test_init_db.py  test_pipeline_fetch_evidence.py  test_priors.py  test_stratified_eval.py
tests/api/: test_chat_api.py  test_cors_env.py  test_evidence_retry.py  test_max_records_cap.py  test_models_cors.py  test_rate_limit.py  test_runs_api.py  test_static_spa.py
tests/integration/: test_evaluation_service.py  test_feature_pipeline.py  test_lr_scoring.py  test_lr_v2_training_and_scoring.py
tests/repos/: test_explanation_repo.py  test_feature_repo.py  test_trained_model_repo.py
tests/services/: test_benchmarking_offline.py  test_calibration.py  test_datasets_loader_mapping.py  test_evaluation_metrics.py  test_feature_extraction.py  test_feature_extraction_text_features.py  test_llm_explainer.py  test_model_training.py  test_scoring.py  test_text_features.py
web/: index.html  package.json  vite.config.ts
web/src/: App.css  App.tsx  types.ts
(+17 files in other folders)
