[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustlens"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.100",
  "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.25",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
